made front end look better

--- a/index.html
+++ b/index.html
@@ -8,15 +8,17 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
-        <h1>Medieval Ape Club</h1>
-        <p>Medieval Ape Club is a upcoming NFT project</p>
-    </header>
-    <div class="sign-up">
-        <p>If you are interested, sign upto our newsletter, we promise we won't spam you. We will also potentially give away whitelist to those who signup</p>
-        <div class="subscribe">
-            <input type="text" placeholder="enter email...">
-            <input type="button" name="subscribe">
+    <div class="content">
+        <header>
+            <h1>Medieval Ape Club</h1>
+            <p>Medieval Ape Club is a upcoming NFT project</p>
+        </header>
+        <div class="sign-up">
+            <p>If you are interested, sign upto our newsletter, we promise we won't spam you. We will also potentially give away whitelist to those who signup</p>
+            <div class="subscribe">
+                <input type="text" placeholder="enter email...">
+                <input type="button" name="subscribe" value="subscribe">
+            </div>
         </div>
     </div>
 </body>
