--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Medieval Ape Club</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="style.css">
+    <script src="script.js"></script>
 </head>
 <body>
     <div class="content">
@@ -18,6 +20,15 @@
             <div class="subscribe">
                 <input type="text" placeholder="enter email...">
                 <input type="button" name="subscribe" value="subscribe">
+            </div>
+        </div>
+        <div class="social-media">
+            <div class="twitter-icon">
+                <a class="fab fa-twitter" href="https://twitter.com/MedievalApeClub" target="_blank"></a>
+            </div>
+            <div class="discord-icon">
+                <div class="social-info"><p>coming soon...</p></div>
+                <a class="fab fa-discord" href="#" target="_blank"></a>
             </div>
         </div>
     </div>
