--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <title>Medieval Ape Club</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="style.css">
-    <script src="script.js"></script>
 </head>
 <body>
     <div class="content">
@@ -27,10 +26,16 @@
                 <a class="fab fa-twitter" href="https://twitter.com/MedievalApeClub" target="_blank"></a>
             </div>
             <div class="discord-icon">
-                <div class="social-info"><p>coming soon...</p></div>
-                <a class="fab fa-discord" href="#" target="_blank"></a>
+                <div class="social-info" id="discord-social-info"><p id="discord-social-text">coming soon...</p></div>
+                <a class="fab fa-discord" id="discord" href="#"></a>
+            </div>
+            <div class="opensea-icon">
+                <div class="social-info" id="opensea-social-info"><p id="opensea-social-text">coming soon...</p></div>
+                <span class="opensea" id="opensea"><a href="#" target="_blank"></a></span>
             </div>
         </div>
     </div>
+<script type="text/javascript" src="script.js"></script>
+
 </body>
 </html>
